Fixed Styling
1. Fixed styling since Angela's was yucky
2. What I noticed ruining the UI was the declared width of the body and the weird unnecessary line-height: 100% for the body which forces the h1 and the button to overlap

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,11 +1,20 @@
 body {
-  font: normal 14px/100% "Andale Mono", AndaleMono, monospace;
+  font-family: "Andale Mono", AndaleMono, monospace;
+  font-size: 14px;
   color: #fff;
-  padding: 50px;
-  width: 300px;
   margin: 0 auto;
   background-color: #374954;
   text-align: center;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 h1 {
@@ -13,18 +22,16 @@ h1 {
 }
 
 .container {
-  margin: 60% auto;
 }
 
 button {
-  display: inline;
   background-color: #6bbe92;
   border: 0;
   border-radius: 10px;
   box-shadow: 5px;
-  margin: 10px;
   text-align: center;
   color: #fff;
   font-weight: bold;
   font-size: 50px;
+  padding: 20px 40px;
 }
